progress on resolving incompatibility with support v7 ActionBarActivity