@@ -1,6 +1,7 @@
 apply plugin: 'com.android.application'
 apply plugin: 'robolectric'
 
+// might be useful - https://gist.github.com/anonymous/d0f0bac71a0fb76f8454
 android {
     compileSdkVersion 21
     buildToolsVersion "21.0.1"
@@ -17,8 +18,10 @@ android {
             runProguard false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
+        debug {
+            runProguard false
+        }
     }
-
 
 }
 
@@ -26,22 +29,6 @@ robolectric {
     // configure the set of classes for JUnit tests
     include '**/*Test.class'
     exclude '**/espresso/**/*.class'
-
-    // configure max heap size of the test JVM
-    // maxHeapSize = '2048m'
-
-    // configure the test JVM arguments
-    // jvmArgs '-XX:MaxPermSize=512m', '-XX:-UseSplitVerifier'
-
-    // Specify max number of processes (default is 1)
-    // maxParallelForks = 4
-
-    // Specify max number of test classes to execute in a test process
-    // before restarting the process (default is unlimited)
-    // forkEvery = 150
-
-    // configure whether failing tests should fail the build
-    // ignoreFailures true
 
     // use afterTest to listen to the test execution results
     afterTest { descriptor, result ->
@@ -52,7 +39,8 @@ robolectric {
 // be careful with that, causes lots of pain
 dependencies {
     compile 'com.android.support:support-v4:21.0.0'
-    compile "com.android.support:appcompat-v7:21.0.0"
+    compile 'com.android.support:appcompat-v7:21.0.0'
+    compile 'com.google.guava:guava:18.0'
     compile 'com.squareup.dagger:dagger:1.2.2'
     compile fileTree(dir: 'libs', include: ['*.jar'])
 
